--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
       </div>
 
-      <!-- ABOUT -->
+      <!-- SERVICES -->
       <section id="services" class="services">
             <div class="container">
                   <h2 class="services__title">Plan your dream vacation</h2>
