Grid styles added

--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
       </div>
 
       <!-- SERVICES -->
-      <section id="services" class="services">
+      <section id="services" class="services section">
+            <h2 class="services__title section__title">Plan your dream vacation</h2>
+
             <div class="container">
-                  <h2 class="services__title">Plan your dream vacation</h2>
                   <div class="services-container">
                         <div class="services-container__card">
                               <i class="services-container__item services-container__icon fas fa-bicycle"></i>
@@ -97,10 +98,11 @@
       </section>
 
       <!-- PLACES -->
-      <section id="places" class="places">
+      <section id="places" class="places section">
+            <h2 class="places__title section__title">Popular places</h2>
+
             <div class="container">
                   <article>
-                        <h2 class="places__title">Popular places</h2>
                         <div class="places-container">
                               <div class="places-container__card places-container__card-1">
                                     <img src="./images/places/manuel-antonio-beach.jpg"
